fastline-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastline
  namespace: fastline
