app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml --push-image-registry http://localhost:8082 -n fastline -o charts/
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: app1
  name: app1
  namespace: fastline
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app1
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yml --push-image-registry http://localhost:8082 -n fastline -o charts/
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: app1
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: db
            - name: DB_NAME
              value: postgres
            - name: DB_PASSWORD
              value: postgres
            - name: DB_PORT
              value: "5432"
            - name: DB_USER
              value: postgres
          image: fastline.local:8082/app1:latest
          name: app1
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
