app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml --push-image-registry http://localhost:8082 -n fastline -o charts/
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: app1
  name: app1
  namespace: fastline
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: app1
