db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml --push-image-registry http://localhost:8082 -n fastline -o charts/
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: db
  name: db
  namespace: fastline
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: db
